--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -320,3 +320,42 @@ html {
 #photos .image:hover img, .video:hover video{
     transform: scale(1.5);
 }
+
+
+#toggleButton {
+  background: transparent;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 20px;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  margin-top: 20px;
+  overflow: hidden;
+}
+
+#toggleButton:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  background: linear-gradient(to right, #ff00ff, #00ffff, #ff00ff);
+  z-index: -1;
+  filter: blur(20px);
+  opacity: 0.7;
+  animation: neonBorder 1.5s linear infinite;
+}
+
+@keyframes neonBorder {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
