--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,7 +246,81 @@ html {
     transition: color .3s ease-in, background-color .3s ease-in, border-color .3s ease-in
 }
 
-x
+
+#gallery{
+    position: relative;
+    
+}
+
+#photos{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+    padding: 10px;
+    width: 90%;
+    max-width: 1400px;
+    margin: 0 auto
+}
+
+#popup-image{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .9);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+    display: none;
+}
+
+#popup-image span{
+    position: absolute;
+    top: 0;
+    right: 10px;
+    font-size: 40px;
+    font-weight: bolder;
+    color: #fff;
+    cursor: pointer;
+    z-index: 100;
+}
+
+#popup-image img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 5px solid #fff;
+    width: 750px;
+    object-fit: cover;
+}
+
+@media (max-width:768px){
+    #popup-image img{
+        width: 95%;
+    }
+}
+
+
+#photos .image, .video{
+    height: 250px;
+    width: 350px;
+    border: 10px solid #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
+    overflow: hidden;
+    cursor: pointer;
+}
+
+#photos .image img, .video video{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: .2s linear;
+}
+#photos .image:hover img, .video:hover video{
+    transform: scale(1.5);
+}
+
 
 #toggleButton {
   background: transparent;
